[WR] Fixed chart displays not working on mobile and desktop

--- a/style.scss
+++ b/style.scss
@@ -539,10 +539,15 @@ ul.CTAs {
     color: var(--url-visited);
 }
 
+#wr-chart-wrapper {
+    min-height: 420px;
+}
+
 .wr-shottype-buttons {
     font-size: 14px;
     color: var(--discord-purple);
 }
+
 
 .wrapper {
     display: flex;
@@ -754,6 +759,9 @@ ul.CTAs {
 @media screen and (max-width: 500px) {
     :root {
         --sidebar-width: 100% !important;
+    }
+    #wr-chart-wrapper {
+        max-width: 100%;
     }
     #header {
         padding-left: 0px;
